[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/iconwhite512.png" type="Texture" id=1]
[ext_resource path="res://Scripts/World.gd" type="Script" id=2]
[ext_resource path="res://Assets/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/mask1.png" type="Texture" id=4]
[ext_resource path="res://Assets/placeholder.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=9]
size = 18
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.129412, 0.141176, 0.192157, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=7]
size = 20
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.227451, 0.25098, 0.345098, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=13]
default_font = SubResource( 12 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.0117647, 0.439216, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.129412, 0.776471, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="World" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="."]
margin_right = 512.0
margin_bottom = 512.0
rect_scale = Vector2( 0.75, 0.75 )
rect_clip_content = true

[node name="Icon" type="Sprite" parent="Control"]
position = Vector2( 256, 256 )
texture = ExtResource( 1 )

[node name="IconSprite" type="Sprite" parent="Control"]
light_mask = 3
position = Vector2( 256, 256 )
texture = ExtResource( 5 )

[node name="Mask" type="Light2D" parent="Control"]
position = Vector2( 256, 256 )
texture = ExtResource( 4 )
mode = 3
range_item_cull_mask = 2

[node name="Settings" type="TabContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0.937255 )
margin_left = 384.0
margin_right = 768.0
margin_bottom = 384.0
theme = SubResource( 10 )
custom_styles/panel = SubResource( 6 )

[node name="Icon" type="Tabs" parent="Settings"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0

[node name="MarginContainer" type="MarginContainer" parent="Settings/Icon"]
margin_left = 32.0
margin_top = 32.0
margin_right = 352.0
margin_bottom = 448.0
theme = SubResource( 8 )

[node name="GridContainer" type="GridContainer" parent="Settings/Icon/MarginContainer"]
margin_right = 320.0
margin_bottom = 416.0

[node name="IconColour" type="Panel" parent="Settings/Icon/MarginContainer/GridContainer"]
margin_right = 320.0
margin_bottom = 32.0
rect_min_size = Vector2( 320, 32 )
size_flags_horizontal = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 11 )

[node name="Label" type="Label" parent="Settings/Icon/MarginContainer/GridContainer/IconColour"]
margin_left = 8.0
margin_top = 5.0
margin_bottom = 24.0
text = "Icon Colour                        #"

[node name="LineEdit" type="LineEdit" parent="Settings/Icon/MarginContainer/GridContainer/IconColour"]
margin_left = 240.0
margin_right = 320.0
margin_bottom = 32.0
theme = SubResource( 13 )
max_length = 6
placeholder_text = "Hex Code"

[node name="Blue" type="Button" parent="Settings/Icon/MarginContainer/GridContainer/IconColour"]
margin_left = 160.0
margin_right = 192.0
margin_bottom = 32.0
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="Settings/Icon/MarginContainer/GridContainer/IconColour/Blue"]
margin_left = 4.0
margin_top = 4.0
margin_right = 28.0
margin_bottom = 28.0
mouse_filter = 1
custom_styles/panel = SubResource( 14 )

[node name="Green" type="Button" parent="Settings/Icon/MarginContainer/GridContainer/IconColour"]
margin_left = 192.0
margin_right = 224.0
margin_bottom = 32.0
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="Settings/Icon/MarginContainer/GridContainer/IconColour/Green"]
margin_left = 4.0
margin_top = 4.0
margin_right = 28.0
margin_bottom = 28.0
mouse_filter = 1
custom_styles/panel = SubResource( 15 )

[node name="Icon Image" type="Panel" parent="Settings/Icon/MarginContainer/GridContainer"]
margin_top = 36.0
margin_right = 320.0
margin_bottom = 68.0
rect_min_size = Vector2( 320, 32 )
size_flags_horizontal = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 11 )

[node name="Label" type="Label" parent="Settings/Icon/MarginContainer/GridContainer/Icon Image"]
margin_left = 8.0
margin_top = 5.0
margin_bottom = 24.0
text = "Icon Image"

[node name="Button" type="Button" parent="Settings/Icon/MarginContainer/GridContainer/Icon Image"]
margin_left = 160.0
margin_right = 320.0
margin_bottom = 32.0
text = "Import Image"

[node name="XPos" type="Panel" parent="Settings/Icon/MarginContainer/GridContainer"]
margin_top = 72.0
margin_right = 320.0
margin_bottom = 104.0
rect_min_size = Vector2( 320, 32 )
size_flags_horizontal = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 11 )

[node name="Label" type="Label" parent="Settings/Icon/MarginContainer/GridContainer/XPos"]
margin_left = 8.0
margin_top = 5.0
margin_bottom = 24.0
text = "X Position: 64"

[node name="HSlider" type="HSlider" parent="Settings/Icon/MarginContainer/GridContainer/XPos"]
margin_left = 160.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 24.0
max_value = 512.0
value = 256.0

[node name="YPos" type="Panel" parent="Settings/Icon/MarginContainer/GridContainer"]
margin_top = 108.0
margin_right = 320.0
margin_bottom = 140.0
rect_min_size = Vector2( 320, 32 )
size_flags_horizontal = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 11 )

[node name="Label" type="Label" parent="Settings/Icon/MarginContainer/GridContainer/YPos"]
margin_left = 8.0
margin_top = 5.0
margin_bottom = 24.0
text = "Y Position: 64"

[node name="HSlider" type="HSlider" parent="Settings/Icon/MarginContainer/GridContainer/YPos"]
margin_left = 160.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 24.0
max_value = 512.0
value = 256.0

[node name="Scale" type="Panel" parent="Settings/Icon/MarginContainer/GridContainer"]
margin_top = 144.0
margin_right = 320.0
margin_bottom = 176.0
rect_min_size = Vector2( 320, 32 )
size_flags_horizontal = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 11 )

[node name="Label" type="Label" parent="Settings/Icon/MarginContainer/GridContainer/Scale"]
margin_left = 8.0
margin_top = 5.0
margin_bottom = 24.0
text = "Scale"

[node name="LineEdit" type="LineEdit" parent="Settings/Icon/MarginContainer/GridContainer/Scale"]
margin_left = 160.0
margin_right = 320.0
margin_bottom = 34.0
text = "1.00"
placeholder_text = "1.00"

[node name="Mask" type="Tabs" parent="Settings"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0

[node name="MarginContainer" type="MarginContainer" parent="Settings/Mask"]
margin_left = 32.0
margin_top = 32.0
margin_right = 352.0
margin_bottom = 448.0
theme = SubResource( 8 )

[node name="GridContainer" type="GridContainer" parent="Settings/Mask/MarginContainer"]
margin_right = 320.0
margin_bottom = 416.0

[node name="MaskEnabled" type="Panel" parent="Settings/Mask/MarginContainer/GridContainer"]
margin_right = 320.0
margin_bottom = 32.0
rect_min_size = Vector2( 320, 32 )
size_flags_horizontal = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 11 )

[node name="Label" type="Label" parent="Settings/Mask/MarginContainer/GridContainer/MaskEnabled"]
margin_left = 8.0
margin_top = 5.0
margin_bottom = 24.0
text = "Mask Enabled"

[node name="CheckButton" type="CheckButton" parent="Settings/Mask/MarginContainer/GridContainer/MaskEnabled"]
margin_left = 248.0
margin_top = -4.0
margin_right = 324.0
margin_bottom = 36.0
pressed = true

[node name="Type" type="Panel" parent="Settings/Mask/MarginContainer/GridContainer"]
margin_top = 36.0
margin_right = 320.0
margin_bottom = 68.0
rect_min_size = Vector2( 320, 32 )
size_flags_horizontal = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 11 )

[node name="Label" type="Label" parent="Settings/Mask/MarginContainer/GridContainer/Type"]
margin_left = 8.0
margin_top = 5.0
margin_bottom = 24.0
text = "Type: 1"

[node name="HSlider" type="HSlider" parent="Settings/Mask/MarginContainer/GridContainer/Type"]
margin_left = 112.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 24.0
min_value = 1.0
max_value = 4.0
value = 1.0

[node name="Angle" type="Panel" parent="Settings/Mask/MarginContainer/GridContainer"]
margin_top = 72.0
margin_right = 320.0
margin_bottom = 104.0
rect_min_size = Vector2( 320, 32 )
size_flags_horizontal = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 11 )

[node name="Label" type="Label" parent="Settings/Mask/MarginContainer/GridContainer/Angle"]
margin_left = 8.0
margin_top = 5.0
margin_bottom = 24.0
text = "Angle: 0Â°"

[node name="HSlider" type="HSlider" parent="Settings/Mask/MarginContainer/GridContainer/Angle"]
margin_left = 112.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 24.0
max_value = 360.0

[node name="Render" type="Tabs" parent="Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0

[node name="MarginContainer" type="MarginContainer" parent="Settings/Render"]
margin_left = 32.0
margin_top = 32.0
margin_right = 352.0
margin_bottom = 448.0
theme = SubResource( 8 )

[node name="GridContainer" type="GridContainer" parent="Settings/Render/MarginContainer"]
margin_right = 320.0
margin_bottom = 416.0

[node name="Original" type="Panel" parent="Settings/Render/MarginContainer/GridContainer"]
margin_right = 320.0
margin_bottom = 32.0
rect_min_size = Vector2( 320, 32 )
size_flags_horizontal = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 11 )

[node name="Label" type="Label" parent="Settings/Render/MarginContainer/GridContainer/Original"]
margin_left = 8.0
margin_top = 5.0
margin_bottom = 24.0
text = "Original Icon Texture (128x)"

[node name="CheckButton" type="CheckButton" parent="Settings/Render/MarginContainer/GridContainer/Original"]
margin_left = 248.0
margin_top = -4.0
margin_right = 324.0
margin_bottom = 36.0

[node name="Render" type="Panel" parent="Settings/Render/MarginContainer/GridContainer"]
margin_top = 36.0
margin_right = 320.0
margin_bottom = 68.0
rect_min_size = Vector2( 320, 32 )
size_flags_horizontal = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 11 )

[node name="Button" type="Button" parent="Settings/Render/MarginContainer/GridContainer/Render"]
margin_left = 112.0
margin_right = 208.0
margin_bottom = 32.0
text = "Render"

[node name="Label" type="Label" parent="Settings/Render/MarginContainer/GridContainer"]
margin_top = 72.0
margin_right = 320.0
margin_bottom = 96.0
text = "Tool made by onepu#8773"

[node name="Label" type="Label" parent="."]
margin_left = 416.0
margin_top = 352.0
margin_right = 569.0
margin_bottom = 376.0
theme = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 0.745098 )
text = "Press ESC to exit"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
margin_right = -32.0
margin_bottom = -32.0
mouse_filter = 2
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png ; Portable Network Graphics" )

[node name="FileDialog2" type="FileDialog" parent="."]
margin_left = 256.0
margin_top = 20.0
margin_right = 992.0
margin_bottom = 512.0
mouse_filter = 2
window_title = "Render Image"
access = 2
filters = PoolStringArray( "*.png ; Portable Network Graphics" )

[connection signal="pressed" from="Settings/Icon/MarginContainer/GridContainer/IconColour/Blue" to="." method="_on_Blue_pressed"]
[connection signal="pressed" from="Settings/Icon/MarginContainer/GridContainer/IconColour/Green" to="." method="_on_Green_pressed"]
[connection signal="pressed" from="Settings/Icon/MarginContainer/GridContainer/Icon Image/Button" to="." method="_on_Import_pressed"]
[connection signal="toggled" from="Settings/Mask/MarginContainer/GridContainer/MaskEnabled/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Settings/Render/MarginContainer/GridContainer/Original/CheckButton" to="." method="_on_Original_CheckButton_toggled"]
[connection signal="pressed" from="Settings/Render/MarginContainer/GridContainer/Render/Button" to="." method="_on_Render_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="FileDialog2" to="." method="_on_FileDialog2_file_selected"]
[connection signal="popup_hide" from="FileDialog2" to="." method="_on_FileDialog2_popup_hide"]
